Making it a django project.

--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -11,13 +11,13 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-			<link rel="stylesheet" href="css/style-normal.css" />
+			<link rel="stylesheet" href="static/css/skel.css" />
+			<link rel="stylesheet" href="static/css/style.css" />
+			<link rel="stylesheet" href="static/css/style-wide.css" />
+			<link rel="stylesheet" href="static/css/style-normal.css" />
 		</noscript>
-		<link rel="stylesheet" type="text/css" href="css/tictac/style.css">
-		<link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
+		<link rel="stylesheet" type="text/css" href="static/css/tictac/style.css">
+		<link rel="stylesheet" href="static/bower_components/angular-material/angular-material.css">
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body ng-app="ThirdDime">
@@ -149,20 +149,20 @@
 			</footer>
 
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="bower_components/angular/angular.min.js"></script>
-	    <script src="bower_components/angular-aria/angular-aria.js"></script>
-	    <script src="bower_components/angular-animate/angular-animate.js"></script>
-	    <script src="bower_components/hammerjs/hammer.js"></script>
-	    <script src="bower_components/angular-material/angular-material.js"></script>
-		<script src="vendor/original/jquery.poptrox.min.js"></script>
-		<script src="vendor/original/jquery.scrolly.min.js"></script>
-		<script src="vendor/original/jquery.scrollgress.min.js"></script>
-		<script src="vendor/original/skel.min.js"></script>
-		<script src="vendor/original/init.js"></script>
-		<script src="js/thirdDime.module.js"></script>
-		<script src="js/quiz/quiz.controller.js"></script>
-		<script src="js/intro/intro.controller.js"></script>
+		<script src="static/bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="static/bower_components/angular/angular.min.js"></script>
+	    <script src="static/bower_components/angular-aria/angular-aria.js"></script>
+	    <script src="static/bower_components/angular-animate/angular-animate.js"></script>
+	    <script src="static/bower_components/hammerjs/hammer.js"></script>
+	    <script src="static/bower_components/angular-material/angular-material.js"></script>
+		<script src="static/vendor/original/jquery.poptrox.min.js"></script>
+		<script src="static/vendor/original/jquery.scrolly.min.js"></script>
+		<script src="static/vendor/original/jquery.scrollgress.min.js"></script>
+		<script src="static/vendor/original/skel.min.js"></script>
+		<script src="static/vendor/original/init.js"></script>
+		<script src="static/js/thirdDime.module.js"></script>
+		<script src="static/js/quiz/quiz.controller.js"></script>
+		<script src="static/js/intro/intro.controller.js"></script>
 
 	</body>
 </html>
