--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -11,7 +11,7 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<meta property="og:title" content="ThirdDime"/>
-		<meta property="og:image" content=""/>
+		<meta property="og:image" content="/static/images/p2.jpg"/>
 		<meta property="og:description" content="Behind the BrushStroke"/>
 		<noscript>
 			<link rel="stylesheet" href="static/css/skel.css" />
@@ -29,7 +29,8 @@
 		<link rel="stylesheet" href="static/bower_components/angular-material/themes/brown-theme.css">
 		<link rel="stylesheet" href="static/vendor/angular-social/angular-social.css">
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-		
+
+		<script src="static/bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="static/vendor/original/jquery.poptrox.min.js"></script>
 		<script src="static/vendor/original/jquery.scrolly.min.js"></script>
 		<script src="static/vendor/original/jquery.scrollgress.min.js"></script>
@@ -116,7 +117,7 @@
 							     data-url="'http://thirddime.com'"
 							     data-title="'ThirdDime'"
 							     data-description="'Behind the BrushStrokes'"
-							     data-image="'http://upload.wikimedia.org/wikipedia/commons/9/94/John_Everett_Millais_-_Ophelia_-_Google_Art_Project.jpg'">
+							     data-image="'/static/images/p2.jpg'">
 							    <li class="ng-social-facebook">FaceBook</li>
 							    <li class="ng-social-google-plus">Google+</li>
 							    <li class="ng-social-twitter">Twitter</li>
@@ -158,17 +159,16 @@
 
 				<!-- Icons -->
 					<ul class="actions">
-						<strong> Contact Us : keepInTouch@thirdDime.com </strong>
+						<strong> Contact Us : info@thirddime.com </strong>
 					</ul>
 			
 			</footer>
 
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="static/bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="static/bower_components/angular/angular.min.js"></script>
 	    <script src="static/bower_components/angular-aria/angular-aria.js"></script>
 	    <script src="static/bower_components/hammerjs/hammer.js"></script>
-	    <script src="static/bower_components/vendor/angular-material.js"></script>
+	    <script src="static/vendor/angular-material/angular-material.js"></script>
 	    <script src="static/bower_components/angular-animate/angular-animate.min.js"></script>
 		<script src="static/js/thirdDime.module.js"></script>
 		<script src="static/js/quiz/quiz.controller.js"></script>
