--- a/thirdDime/static/css/style.css
+++ b/thirdDime/static/css/style.css
@@ -492,7 +492,7 @@
 	/* Main */
 		
 		.main {
-			font-family: Garamond, Georgia, serif;
+			font-family: 'Josefin Sans', Garamond, Georgia, serif;
 			position: relative;
 			margin: 0;
 			overflow-x: hidden;
@@ -535,7 +535,10 @@
 			.main.style2 {
 				padding: 10em 0 10em 0;
 				overflow: hidden;
+				font-size: 110%;
 			}
+
+				
 			
 				.main.style2 .content {
 					position: relative;
@@ -561,7 +564,7 @@
 						left: 0;
 					}
 
-				.main.style2.right {
+				.main.right {
 				}
 
 					.main.style2.right .content {
@@ -585,6 +588,7 @@
 			.main.style3 {
 				text-align: center;
 				padding: 6em 0 6em 0;
+				font-size: 110%
 			}
 
 				.main.style3 .content {
@@ -655,7 +659,7 @@
 /*********************************************************************************/
 
 	#intro {
-		background: url('images/overlay.png'), url('../images/intro.jpg');
+		background: url('images/overlay.png'), url('../images/intronew.jpg');
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
