--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -28,6 +28,7 @@
 		<link rel="stylesheet" href="static/bower_components/angular-material/themes/red-theme.css">
 		<link rel="stylesheet" href="static/bower_components/angular-material/themes/brown-theme.css">
 		<link rel="stylesheet" href="static/vendor/angular-social/angular-social.css">
+		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 
 		<script src="static/bower_components/jquery/dist/jquery.min.js"></script>
@@ -44,9 +45,10 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content container 75%">
 					<header>
-						<h2>ThirdDime</h2>
+						<h2></h2>
 					</header>
-					<p> <strong> Behind the brushstrokes </strong> </p>
+					<p> <strong></strong> </p>
+					<br> <br> <br>  <br> <br> <br> <br> <br>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -159,7 +161,7 @@
 
 				<!-- Icons -->
 					<ul class="actions">
-						<strong> Contact Us : info@thirddime.com </strong>
+						<strong> <p>Contact Us:  info@thirddime.com</p>  </strong>
 					</ul>
 			
 			</footer>
