--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -11,7 +11,7 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<meta property="og:title" content="ThirdDime"/>
-		<meta property="og:image" content="/static/images/p2.jpg"/>
+		<meta property="og:image" content="http://thirddime.com/static/images/p2.jpg"/>
 		<meta property="og:description" content="Behind the BrushStroke"/>
 		<noscript>
 			<link rel="stylesheet" href="static/css/skel.css" />
