--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -8,11 +8,12 @@
 	<head>
 		<title>ThirdDime</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<meta property="og:title" content="ThirdDime"/>
-		<meta property="og:image" content="http://thirddime.com/static/images/p2.jpg"/>
-		<meta property="og:description" content="Behind the BrushStroke"/>
+		<meta property="og:title" content="ThirdDime" />
+		<meta property="og:site_name" content="ThirdDime" />
+		<meta property="og:url" content="http://thirddime.com" />
+		<meta property="og:description" content="Behind the BrushStrokes." />
+		<meta property="og:image" content="http://thirddime.com/static/images/p2.jpg" />
+		<meta property="og:type" content="website" />
 		<noscript>
 			<link rel="stylesheet" href="static/css/skel.css" />
 			<link rel="stylesheet" href="static/css/style.css" />
