Changing ope graph image to a bigger size

--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:site_name" content="ThirdDime" />
 		<meta property="og:url" content="http://thirddime.com" />
 		<meta property="og:description" content="Behind the BrushStrokes." />
-		<meta property="og:image" content="http://thirddime.com/static/images/p2.jpg" />
+		<meta property="og:image" content="http://thirddime.com/static/images/backup/memory.jpg" />
 		<meta property="og:type" content="website" />
 		<noscript>
 			<link rel="stylesheet" href="static/css/skel.css" />
