--- a/thirdDime/static/layouts/contact.html
+++ b/thirdDime/static/layouts/contact.html
@@ -1,7 +1,7 @@
 <div class="content container">
 					<header>
 						<h2 class="animate-show" ng-show="isVisible">Say Hello.</h2>
-						<h2 class="animate-show" ng-hide="isVisible">Hello {{user.name}} </h2>
+						<h2 class="animate-show" ng-hide="isVisible">Hello!</h2>
 						<div layout="row" layout-align="center center">
 							<ul ng-social-buttons
 							     data-url="'http://thirddime.com'"
@@ -25,16 +25,9 @@
 					<!-- Contact Form -->	
 						<div class="contact form animate-show"  ng-show="isVisible">
 							<form name="contactForm">
-								<div class="row 100%">
-									<div class="6u"><input type="text" name="name" placeholder="Name" ng-model="user.name" /></div>
-									<div class="6u"><input type="email" name="email" placeholder="Email" ng-model="user.email" /></div>
-								</div>
-								<div class="row">
-									<div class="12u">
-										<ul class="actions">
-											<li><input type="submit" ng-disabled="contactForm.$dirty && contactForm.$invalid" value="Keep me posted !" ng-click="sendUser()" /></li>
-										</ul>
-									</div>
+								<div layout="row">
+									<div flex="60"><input type="email" name="email" placeholder="Email" ng-model="user.email" /></div>
+									<div flex="40"><input type="submit" ng-disabled="contactForm.$dirty && contactForm.$invalid" value="Keep me posted !" ng-click="sendUser()" /></div>
 								</div>
 							</form>
 						</div>	
