--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -107,6 +107,23 @@
 							</div>
 						</div>
 					</div>
+
+					<br/>
+					<br/>
+					<br/>
+
+					<div layout="row" layout-align="center center">
+						<ul ng-social-buttons
+						     data-url="'http://thirddime.com'"
+						     data-title="'ThirdDime'"
+						     data-description="'Behind the BrushStrokes'"
+						     data-image="'http://thirddime.com/static/images/p2.jpg'">
+						    <li class="ng-social-facebook">FaceBook</li>
+						    <li class="ng-social-google-plus">Google+</li>
+						    <li class="ng-social-twitter">Twitter</li>
+						    <li class="ng-social-pinterest">Pinterest</li>
+						</ul>
+					</div>
 				</div>
 			</section>
 			
