--- a/thirdDime/static/css/style.css
+++ b/thirdDime/static/css/style.css
@@ -486,7 +486,7 @@
 		}
 		
 			.box.style2 {
-				padding: 3.5em 2.5em 3.5em 2.5em;
+				padding: 1.5em 2.5em 2em 2.5em;
 			}
 
 	/* Main */
@@ -671,7 +671,7 @@
 /*********************************************************************************/
 
 	#one {
-		background: url('images/overlay.png'), url('../images/p5.jpg');
+		background: url('images/overlay.png'), url('../images/view2.jpg');
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
@@ -682,7 +682,7 @@
 /*********************************************************************************/
 
 	#two {
-		background: url('images/overlay.png'), url('../images/p3.jpg');
+		background: url('images/overlay.png'), url('../images/view3.jpg');
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
