--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -72,9 +72,11 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Launching Soon !!</h2>
+						<h2>Explore the magic</h2>
 					</header>
-					<p>Meanwhile ,take our thought quiz to quench your curiosity. <strong>Dive deeper</strong> and find out what you see.</p>
+					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum. 
+					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu, 
+					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -83,8 +85,10 @@
 			<section id="work" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>Thought Quiz</h2>
-						<p>Click on any tile to start the quiz.</p>
+						<h2>The Quiz</h2>
+						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum. 
+						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis 
+						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
 					</header>
 
 					<div ng-include src="'static/layouts/quiz.html'"></div>
@@ -116,12 +120,9 @@
 			<footer id="footer">
 
 				<!-- Icons -->
-					<table style="width=100%">
-						<tr>
-							<td>Contact Us:  hello@thirddime.com </td>
-							<td style="text-align:right">&copy;  2014 Thirddime, All rights reserved.</td>
-						</tr>
-					</table>
+					<ul class="actions">
+						<strong> <p>Contact Us:  info@thirddime.com</p>  </strong>
+					</ul>
 			
 			</footer>
 
