--- a/thirdDime/static/css/style.css
+++ b/thirdDime/static/css/style.css
@@ -671,7 +671,7 @@
 /*********************************************************************************/
 
 	#one {
-		background: url('images/overlay.png'), url('../images/p5.jpg');
+		background: url('images/overlay.png'), url('../images/view2.jpg');
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
