--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -72,11 +72,9 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Explore the magic</h2>
+						<h2>LAUNCHING SOON!!</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum. 
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu, 
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Meanwhile ,take our thought quiz to quench your curiosity. <strong>Dive deeper</strong> and find out what you see.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
