Footer edited --- added Copyright message

--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -118,9 +118,12 @@
 			<footer id="footer">
 
 				<!-- Icons -->
-					<ul class="actions">
-						<strong> <p>Contact Us:  info@thirddime.com</p>  </strong>
-					</ul>
+					<table>
+						<tr>
+							<td>Contact Us:  hello@thirddime.com</td>
+							<td style="text-align:right">&copy; 2014 Thirddime, All rights reserved.</td>
+						</tr>
+					<table>
 			
 			</footer>
 
