--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -83,10 +83,8 @@
 			<section id="work" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>The Quiz</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum. 
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis 
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>Thought Quiz</h2>
+						<p>Click on any tile to start the quiz.</p>
 					</header>
 
 					<div ng-include src="'static/layouts/quiz.html'"></div>
