--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -40,19 +40,32 @@
 		<script src="static/vendor/original/init.js"></script>
 	</head>
 	<body ng-controller="AppController">
-
-			
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
-				<div class="content container 75%">
+				<div class="content container 100%">
+					<div layout="row" layout-align="center center">
+						<img src="/static/images/header.jpg">
+					</div>
 					<header>
-						<h2></h2>
+						<h2>We are coming soon</h2>
 					</header>
-					<p> <strong></strong> </p>
-					<br> <br> <br>  <br> <br> <br> <br> <br>
-					<footer>
-						<a href="#one" class="button style2 down">More</a>
-					</footer>
+					<!-- <p> <strong>Subscribe to our mailing list</strong> </p> -->
+					<!-- <br> <br> <br>  <br> <br> <br> <br> <br> -->
+					<div layout="row" layout-align="space-between center">
+						<div layout="row" layout-align="center center" class="animate-show"  ng-show="isVisible" flex="33">
+							<input type="email" placeholder="  E-mail" ng-model="user.email"/>
+							<md-button ng-click="sendUser()" style="background: #666666;">Subscribe</md-button>
+						</div>
+						<div layout="row" layout-align="center center" class="animate-show"  ng-hide="isVisible">
+							<h4>ThankYou. Please keep Exploring.</h4>
+						</div>
+						<div flex="33">
+							<a href="#one" class="button style2 down">More</a>
+						</div>
+						<a href="#quiz" flex="33">
+							<md-button layout-fill style="background: #666666;">Take quiz</md-button>
+						</a>
+					</div>
 				</div>
 			</section>
 		
@@ -64,6 +77,13 @@
 					</header>
 					<p><strong>ThirdDime</strong> enables you to explore the unknown dimensions hidden inside an art 
 					and to create a understanding which is beyond the colours imprints on a canvas.</p>
+					<div layout="row" layout-align="center center" class="animate-show"  ng-show="isVisible">
+						<input type="email" placeholder="  E-mail" ng-model="user.email"/>
+						<md-button ng-click="sendUser()" style="background: #666666;">Subscribe</md-button>
+					</div>
+					<div layout="row" layout-align="center center" class="animate-show"  ng-hide="isVisible">
+						<h4>ThankYou. Please keep Exploring.</h4>
+					</div>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -80,7 +100,7 @@
 			</section>
 			
 		<!-- Work -->
-			<section id="work" class="main style3 primary">
+			<section id="quiz" class="main style3 primary">
 				<div class="content container">
 					<header>
 						<h2>Thought Quiz</h2>
@@ -107,7 +127,49 @@
 			
 		<!-- Contact -->
 			<section id="contact" class="main style3 secondary">
-				<div ng-include src="'static/layouts/contact.html'"></div>
+				<div class="content container">
+					<header>
+						<div class="animate-show" ng-show="isVisible">
+							<h2>Say Hello.</h2>
+							<p>Keep in touch with us to expand your horizons by understanding art from a deeper level.</p>
+						</div>
+						<div class="animate-show" ng-hide="isVisible">
+							<h2>Thank you for subscribing. More interesting artworks are coming your way soon.</h2>
+						</div>
+					</header>
+					<div class="box container 75%">
+					
+					<!-- Contact Form -->	
+						<div class="animate-show"  ng-show="isVisible">
+							<form name="contactForm">
+								<div layout="row">
+									<div flex="60"><input type="email" name="email" placeholder="Email" ng-model="user.email" /></div>
+									<div flex="40"><input type="submit" class="active" ng-disabled="contactForm.$dirty && contactForm.$invalid" value="Keep me posted !" ng-click="sendUser()" /></div>
+								</div>
+							</form>
+						</div>
+						<br/>
+						<div class="animate-show" layout-padding="10" layout-margin="10">
+							<div layout="row" layout-align="center center">
+								<div flex="33">
+									<a href="http://in.pinterest.com/saikatchowdhury/thirddime-collection/" target="_blank">
+							        <img src="/static/images/social/pinterest.png" style="height: 100px; width: 100px" />
+							        </a>	
+							    </div>
+								<div flex="33">
+									<a href="https://twitter.com/thirddime" target="_blank">
+							        <img src="/static/images/social/twitter.png" style="height: 100px; width: 100px" />
+							        </a>
+							    </div>
+								<div flex="33">
+									<a href="https://www.facebook.com/pages/ThirdDime-Art/1518696245078520?fref=ts" target="_blank">
+							        <img src="/static/images/social/facebook.png" style="height: 100px; width: 100px" />
+							        </a>
+							    </div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</section>
 
 			
