--- a/thirdDime/static/css/style.css
+++ b/thirdDime/static/css/style.css
@@ -400,7 +400,7 @@
 			height: 2.8em;
 			line-height: 2.8em;
 			outline: 0;
-			padding: 0 2em 0 2em;
+			/*padding: 0 2em 0 2em;*/
 			position: relative;
 			text-align: center;
 			text-decoration: none;
