--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -44,14 +44,15 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content container 100%">
 					<div layout="row" layout-align="center center">
-						<img src="/static/images/header.jpg">
+						<img src="/static/images/header.jpg" hide-sm>
+						<img src="/static/images/p0.jpg" hide-gt-md>
 					</div>
 					<header>
 						<h2>We are coming soon</h2>
 					</header>
 					<!-- <p> <strong>Subscribe to our mailing list</strong> </p> -->
 					<!-- <br> <br> <br>  <br> <br> <br> <br> <br> -->
-					<div layout="row" layout-align="space-between center">
+					<div layout="row" layout-sm="column" layout-align="space-between center">
 						<div layout="row" layout-align="center center" class="animate-show"  ng-show="isVisible" flex="33">
 							<input type="email" placeholder="  E-mail" ng-model="user.email"/>
 							<md-button ng-click="sendUser()" style="background: #666666;">Subscribe</md-button>
@@ -142,9 +143,9 @@
 					<!-- Contact Form -->	
 						<div class="animate-show"  ng-show="isVisible">
 							<form name="contactForm">
-								<div layout="row">
-									<div flex="60"><input type="email" name="email" placeholder="Email" ng-model="user.email" /></div>
-									<div flex="40"><input type="submit" class="active" ng-disabled="contactForm.$dirty && contactForm.$invalid" value="Keep me posted !" ng-click="sendUser()" /></div>
+								<div layout="row" layout-sm="column" layout-align="space-between center">
+									<div flex="50"><div layout="row"><input type="email" name="email" placeholder="Email" ng-model="user.email" layout-fill /></div></div>
+									<div flex="50"><input type="submit" class="active" ng-disabled="contactForm.$dirty && contactForm.$invalid" value="Keep me posted !" ng-click="sendUser()" /></div>
 								</div>
 							</form>
 						</div>
