--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -44,18 +44,18 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content container 100%">
 					<div layout="row" layout-align="center center">
-						<img src="/static/images/header.jpg" hide-sm>
-						<img src="/static/images/p0.jpg" hide-gt-md>
+						<img src="/static/images/header-md.png" show-gt-md hide-sm hide-md>
+						<img src="/static/images/header-mb.png" hide-gt-md>
 					</div>
 					<header>
-						<h2>We are coming soon</h2>
+						<h2>LAUNCHING SOON!!</h2>
 					</header>
 					<!-- <p> <strong>Subscribe to our mailing list</strong> </p> -->
 					<!-- <br> <br> <br>  <br> <br> <br> <br> <br> -->
 					<div layout="row" layout-sm="column" layout-align="space-between center">
 						<div layout="row" layout-align="center center" class="animate-show"  ng-show="isVisible" flex="33" hide-sm>
 							<input type="email" placeholder="  E-mail" ng-model="user.email" style="border-radius: 10px; height: 50px;" />
-							<md-button ng-click="sendUser()" style="background: #666666; border-radius: 10px; height: 50px;">Subscribe</md-button>
+							<md-button ng-click="sendUser()" style="background: #1975D1; border-radius: 10px; height: 50px; color: white;">Subscribe</md-button>
 						</div>
 						<div layout="row" layout-align="center center" class="animate-show"  ng-hide="isVisible">
 							<h4>ThankYou. Please keep Exploring.</h4>
@@ -64,7 +64,7 @@
 							<a href="#one" class="button style2 down">More</a>
 						</div>
 						<a href="#quiz" flex="33">
-							<md-button layout-fill style="background: #666666; border-radius: 10px;">Take quiz</md-button>
+							<md-button layout-fill style="background: #1975D1; border-radius: 10px;  color: white;">Take Thought Quiz</md-button>
 						</a>
 					</div>
 				</div>
@@ -74,13 +74,12 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What We Do</h2>
+						<!-- <h2>What We Do</h2> -->
 					</header>
-					<p><strong>ThirdDime</strong> enables you to explore the unknown dimensions hidden inside an art 
-					and to create a understanding which is beyond the colours imprints on a canvas.</p>
+					<p>Explore thoughts, art can inspire, through <strong>interpretations</strong> and <strong>stories</strong> </p>
 					<div layout="row" layout-align="center center" class="animate-show"  ng-show="isVisible">
 						<input type="email" placeholder="  E-mail" ng-model="user.email" style="border-radius: 10px; height: 50px;" />
-						<md-button ng-click="sendUser()" style="background: #666666;  border-radius: 10px; height: 50px;">Subscribe</md-button>
+						<md-button ng-click="sendUser()" style="background: #1975D1;  border-radius: 10px; height: 50px; color: white;">Subscribe</md-button>
 					</div>
 					<div layout="row" layout-align="center center" class="animate-show"  ng-hide="isVisible">
 						<h4>ThankYou. Please keep Exploring.</h4>
@@ -131,8 +130,8 @@
 				<div class="content container">
 					<header>
 						<div class="animate-show" ng-show="isVisible">
-							<h2>Say Hello.</h2>
-							<p>Keep in touch with us to expand your horizons by understanding art from a deeper level.</p>
+							<h2>Want to discover more such artworks</h2>
+							<p>Join our mailing list.</p>
 						</div>
 						<div class="animate-show" ng-hide="isVisible">
 							<h2>Thank you for subscribing. More interesting artworks are coming your way soon.</h2>
@@ -143,30 +142,35 @@
 					<!-- Contact Form -->	
 						<div class="animate-show"  ng-show="isVisible">
 							<form name="contactForm">
-								<div layout="row" layout-sm="column" layout-align="space-between center">
-									<div flex="50"><div layout="row"><input type="email" name="email" placeholder="Email" ng-model="user.email" layout-fill /></div></div>
+								<div layout="row" layout-sm="column" layout-align="center center">
+									<div flex="50"><div layout="row"><input type="email" name="email" placeholder="Email" ng-model="user.email" style="border: 2px solid #dadada;" /></div></div>
 									<div flex="50"><input type="submit" class="active" ng-disabled="contactForm.$dirty && contactForm.$invalid" value="Keep me posted !" ng-click="sendUser()" style="border-radius: 10px;" /></div>
 								</div>
 							</form>
 						</div>
 						<br/>
-						<div class="animate-show" layout-padding="10" layout-margin="10">
-							<div layout="row" layout-align="center center">
-								<div flex="33">
-									<a href="http://in.pinterest.com/saikatchowdhury/thirddime-collection/" target="_blank">
-							        <img src="/static/images/social/pinterest.png" style="height: 100px; width: 100px" />
-							        </a>	
-							    </div>
-								<div flex="33">
-									<a href="https://twitter.com/thirddime" target="_blank">
-							        <img src="/static/images/social/twitter.png" style="height: 100px; width: 100px" />
-							        </a>
-							    </div>
-								<div flex="33">
-									<a href="https://www.facebook.com/pages/ThirdDime-Art/1518696245078520?fref=ts" target="_blank">
-							        <img src="/static/images/social/facebook.png" style="height: 100px; width: 100px" />
-							        </a>
-							    </div>
+						<div>
+							<div layout="column" layout-align="space-around center">
+								<!-- <div layout="row" layout-align="start start" style="font-size: 80px;" >Connect on</div> -->
+								<h1>Connect On</h1>
+								<!-- <div flex="20"></div> -->
+								<div layout="row" layout-align="center center">
+									<div flex="33">
+										<a href="http://in.pinterest.com/saikatchowdhury/thirddime-collection/" target="_blank">
+								        <img src="/static/images/social/pinterest.png" style="height: 75px; width: 75px" />
+								        </a>	
+								    </div>
+									<div flex="33">
+										<a href="https://twitter.com/thirddime" target="_blank">
+								        <img src="/static/images/social/twitter.png" style="height: 75px; width: 75px" />
+								        </a>
+								    </div>
+									<div flex="33">
+										<a href="https://www.facebook.com/pages/ThirdDime-Art/1518696245078520?fref=ts" target="_blank">
+								        <img src="/static/images/social/facebook.png" style="height: 75px; width: 75px" />
+								        </a>
+								    </div>
+								</div>
 							</div>
 						</div>
 					</div>
