Final touchups for quiz.

--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -22,6 +22,8 @@
 		</noscript>
 		<link rel="stylesheet" type="text/css" href="static/css/tictac/style.css">
 		<link rel="stylesheet" href="static/js/intro/intro.style.css">
+		<link rel="stylesheet" href="static/js/que/que.style.css">
+		<link rel="stylesheet" href="static/js/funda/funda.style.css">
 		<link rel="stylesheet" href="static/vendor/angular-material/angular-material.css">
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="static/bower_components/angular-material/themes/yellow-theme.css">
@@ -116,6 +118,7 @@
 						     data-title="'ThirdDime'"
 						     data-description="'Behind the BrushStrokes'"
 						     data-image="'http://thirddime.com/static/images/p2.jpg'">
+						    <li> SHARE QUIZ:</li>
 						    <li class="ng-social-facebook">FaceBook</li>
 						    <li class="ng-social-google-plus">Google+</li>
 						    <li class="ng-social-twitter">Twitter</li>
