Question text styling

--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -21,6 +21,7 @@
 			<link rel="stylesheet" href="static/css/style-normal.css" />
 		</noscript>
 		<link rel="stylesheet" type="text/css" href="static/css/tictac/style.css">
+		<link rel="stylesheet" type="text/css" href="static/js/question/question.style.css">
 		<link rel="stylesheet" href="static/js/intro/intro.style.css">
 		<link rel="stylesheet" href="static/js/que/que.style.css">
 		<link rel="stylesheet" href="static/js/funda/funda.style.css">
