--- a/thirdDime/static/js/question/question.style.css
+++ b/thirdDime/static/js/question/question.style.css
@@ -41,3 +41,11 @@
     margin-top: 26px;
     margin-left: 0px; }
 */
+
+.qStyle{
+	font-family: 'Josefin Sans', Garamond, Georgia, serif; 
+	letter-spacing: 0.07em;
+	font-size: 1.17em; 
+	padding-left: 10px;	
+}
+
