Changing question format for question 1,2 and 5

--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -99,7 +99,7 @@
 					</header>
 					<p>Meanwhile ,take our thought quiz to quench your curiosity. <strong>Dive deeper</strong> and find out what you see.</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#quiz" class="button style2 down anchored">Next</a>
 			</section>
 			
 		<!-- Work -->
