--- a/thirdDime/static/layouts/quiz.html
+++ b/thirdDime/static/layouts/quiz.html
@@ -1,5 +1,5 @@
 <div ng-controller="QuizController">
-	<div layout="row" layout-sm="column" layout-align="center center">
+	<div layout="row" layout-sm="column" layout-md="column" layout-align="center center">
 		<div ng-repeat="quiz in quizes">
 			<div class="card" ng-click="askQuestion($index)">
 				<div class="flipper" ng-class="{hover: !quiz.flipped}">
