Fix bugs introduced during grunt implementation

--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -17,7 +17,7 @@
 
 		<link rel="shortcut icon" type="image/png" href="/static/images/favicon.ico"/>
 
-	    <!-- build:css base.css -->
+	    <!-- build:css static/build/base.css -->
 		<link rel="stylesheet" href="static/css/skel.css" />
 		<link rel="stylesheet" href="static/css/style.css" />
 		<link rel="stylesheet" href="static/css/style-wide.css" />
@@ -204,7 +204,7 @@
 	    <script src="static/bower_components/hammerjs/hammer.js"></script>
 	    <script src="static/bower_components/angular-animate/angular-animate.min.js"></script>
 
-	    <!-- build:js third.js -->
+	    <!-- build:js static/build/third.js -->
 		<script src="static/vendor/original/jquery.poptrox.min.js"></script>
 		<script src="static/vendor/original/jquery.scrolly.min.js"></script>
 		<script src="static/vendor/original/jquery.scrollgress.min.js"></script>
@@ -214,7 +214,7 @@
 	    <script src="static/vendor/angular-social/angular-social.js"></script>
 	    <!-- endbuild -->
 	    
-	    <!-- build:js base.js -->
+	    <!-- build:js static/build/base.js -->
 		<script src="static/js/thirdDime.module.js"></script>
 		<script src="static/js/quiz/quiz.controller.js"></script>
 		<script src="static/js/intro/intro.controller.js"></script>
