--- a/thirdDime/static/layouts/contact.html
+++ b/thirdDime/static/layouts/contact.html
@@ -10,15 +10,15 @@
 					<div class="box container 75%">
 					
 					<!-- Contact Form -->	
-						<div class="canimate-show"  ng-show="isVisible">
+						<div class="canimate-show" ng-show="isVisible">
 							<form name="contactForm">
 								<div layout="row">
-									<div flex="60"><input type="email" name="email" placeholder="Email" ng-model="user.email" /></div>
-									<div flex="40"><input type="submit" ng-disabled="contactForm.$dirty && contactForm.$invalid" value="Keep me posted !" ng-click="sendUser()" /></div>
+									<div flex="60"><input type="email" name="email" placeholder="Email" ng-model="user.email"></div>
+									<div flex="40"><input type="submit" ng-disabled="contactForm.$dirty && contactForm.$invalid" value="Keep me posted !" ng-click="sendUser()"></div>
 								</div>
 							</form>
 						</div>
-						<div class="canimate-show"  ng-hide="isVisible" layout-padding="10" layout-margin="10">
+						<div class="canimate-show" ng-hide="isVisible" layout-padding="10" layout-margin="10">
 							<div layout="row" layout-align="center center">
 								<div flex="33">
 							        <md-button class="md-fab" aria-label="New document">
