Mobile arrow and quiz fix with funda10 share fix

--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -67,7 +67,8 @@
 							<a href="#one" class="button style2 down">More</a>
 						</div>
 						<a href="#quiz" flex="33">
-							<md-button layout-fill style="background: #1975D1; border-radius: 10px;  color: white;">Take Thought Quiz</md-button>
+							<md-button layout-fill style="background: #1975D1; border-radius: 10px;  color: white;" show-md hide-sm>Take Thought Quiz</md-button>
+							<md-button layout-fill style="background: #1975D1; border-radius: 10px;  color: white;" hide-md hide-gt-md> Quiz </md-button>
 						</a>
 					</div>
 				</div>
@@ -127,7 +128,7 @@
 						</ul>
 					</div>
 				</div>
-				<a href="#contact" class="button style2 down anchored">Next</a>
+				<a href="#contact" class="button style2 down anchored"  show-md hide-sm>Next</a>
 			</section>
 			
 		<!-- Contact -->
