Changing sharing image.

--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:site_name" content="ThirdDime" />
 		<meta property="og:url" content="http://thirddime.com" />
 		<meta property="og:description" content="Behind the BrushStrokes." />
-		<meta property="og:image" content="http://thirddime.com/static/images/backup/memory.jpg" />
+		<meta property="og:image" content="http://thirddime.com/static/images/backup/thoughts.jpg" />
 		<meta property="og:type" content="website" />
 
 		<link rel="shortcut icon" type="image/png" href="/static/images/favicon.ico"/>
@@ -135,7 +135,7 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 						     data-url="'http://thirddime.com'"
 						     data-title="'ThirdDime'"
 						     data-description="'Behind the BrushStrokes'"
-						     data-image="'http://thirddime.com/static/images/p2.jpg'">
+						     data-image="'http://thirddime.com/static/images/backup/thoughts.jpg'">
 						    <li> SHARE QUIZ:</li>
 						    <li class="ng-social-facebook" analytics-on="click"  analytics-event="SocSharePostQuizFB">FaceBook</li>
 						    <li class="ng-social-google-plus" analytics-on="click"  analytics-event="SocSharePostQuizG+">Google+</li>
