--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -29,12 +29,12 @@
 		<link rel="stylesheet" href="static/js/funda/funda.style.css">
 		<link rel="stylesheet" href="static/vendor/angular-material/angular-material.css">
 		<link rel="stylesheet" href="static/vendor/angular-social/angular-social.css">
-		<!-- endbuild -->
-
 		<link rel="stylesheet" href="static/bower_components/angular-material/themes/yellow-theme.css">
 		<link rel="stylesheet" href="static/bower_components/angular-material/themes/green-theme.css">
 		<link rel="stylesheet" href="static/bower_components/angular-material/themes/red-theme.css">
 		<link rel="stylesheet" href="static/bower_components/angular-material/themes/brown-theme.css">
+		<!-- endbuild -->
+
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
@@ -215,16 +215,16 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 			</footer>
 
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="static/bower_components/angular/angular.min.js"></script>
 		<script src="static/bower_components/jquery/dist/jquery.min.js"></script>
+
+	    <!-- build:js static/build/bowerComp.js -->
+		<script src="static/bower_components/angular/angular.min.js"></script>
 	    <script src="static/bower_components/angular-aria/angular-aria.js"></script>
 	    <script src="static/bower_components/hammerjs/hammer.js"></script>
 	    <script src="static/bower_components/angular-animate/angular-animate.min.js"></script>
 	    <script src="static/bower_components/angulartics/dist/angulartics.min.js"></script>
 	    <script src="static/bower_components/angulartics/dist/angulartics-ga.min.js"></script>
 	    <script src="static/bower_components/angulartics/dist/angulartics-mixpanel.min.js"></script>
-
-	    <!-- build:js static/build/third.js -->
 		<script src="static/vendor/original/jquery.poptrox.min.js"></script>
 		<script src="static/vendor/original/jquery.scrolly.min.js"></script>
 		<script src="static/vendor/original/jquery.scrollgress.min.js"></script>
@@ -232,9 +232,6 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 		<script src="static/vendor/original/init.js"></script>
 	    <script src="static/vendor/angular-material/angular-material.js"></script>
 	    <script src="static/vendor/angular-social/angular-social.js"></script>
-	    <!-- endbuild -->
-	    
-	    <!-- build:js static/build/base.js -->
 		<script src="static/js/thirdDime.module.js"></script>
 		<script src="static/js/quiz/quiz.controller.js"></script>
 		<script src="static/js/intro/intro.controller.js"></script>
