--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Big Picture by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html ng-app="ThirdDime">
 	<head>
 		<title>ThirdDime</title>
@@ -46,6 +41,7 @@
 		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 		  ga('create', 'UA-58563444-1', 'auto');
+		  ga('require', 'displayfeatures');
 		  ga('send', 'pageview');
 
 		</script>
