Quiz to Experiment

--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -79,8 +79,8 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 							<a href="#one" class="button style2 down"  analytics-on="click"  analytics-event="Down1">More</a>
 						</div>
 						<a href="#quiz" flex="33">
-							<md-button layout-fill  analytics-on="click" analytics-event="TakeQuiz-lptp" style="background: #1975D1; border-radius: 10px;  color: white;" show-md hide-sm>Take Thought Quiz</md-button>
-							<md-button layout-fill  analytics-on="click" analytics-event="TakeQuiz-mb" style="background: #1975D1; border-radius: 10px;  color: white;" hide-md hide-gt-md> Quiz </md-button>
+							<md-button layout-fill  analytics-on="click" analytics-event="TakeQuiz-lptp" style="background: #1975D1; border-radius: 10px;  color: white;" show-md hide-sm>Take Thought Experiment</md-button>
+							<md-button layout-fill  analytics-on="click" analytics-event="TakeQuiz-mb" style="background: #1975D1; border-radius: 10px;  color: white;" hide-md hide-gt-md> Experiment </md-button>
 						</a>
 					</div>
 				</div>
@@ -110,7 +110,7 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 					<header>
 						<h2>LAUNCHING SOON!!</h2>
 					</header>
-					<p>Meanwhile ,take our thought quiz to quench your curiosity. <strong>Dive deeper</strong> and find out what you see.</p>
+					<p>Meanwhile ,take our thought experiment to quench your curiosity. <strong>Dive deeper</strong> and find out what you see.</p>
 				</div>
 				<a href="#quiz" class="button style2 down anchored" analytics-on="click"  analytics-event="Down3">Next</a>
 			</section>
@@ -119,8 +119,8 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 			<section id="quiz" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>Thought Quiz</h2>
-						<p>Click on any tile to start the quiz.</p>
+						<h2>Thought Experiment</h2>
+						<p>Click on any tile to start the experiment.</p>
 					</header>
 
 					<div ng-include src="'static/layouts/quiz.html'"></div>
@@ -132,7 +132,7 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 						     data-title="'ThirdDime'"
 						     data-description="'Behind the BrushStrokes'"
 						     data-image="'http://thirddime.com/static/images/backup/thoughts.jpg'">
-						    <li> SHARE QUIZ:</li>
+						    <li> SHARE EXPERIMENT:</li>
 						    <li class="ng-social-facebook" analytics-on="click"  analytics-event="SocSharePostQuizFB">FaceBook</li>
 						    <li class="ng-social-google-plus" analytics-on="click"  analytics-event="SocSharePostQuizG+">Google+</li>
 						    <li class="ng-social-twitter" analytics-on="click"  analytics-event="SocSharePostQuizTwtr">Twitter</li>
