--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -9,6 +9,7 @@
 		<meta property="og:description" content="Behind the BrushStrokes." />
 		<meta property="og:image" content="http://thirddime.com/static/images/backup/thoughts.jpg" />
 		<meta property="og:type" content="website" />
+		<meta name="p:domain_verify" content="f87ed45f2b9166f4a154da094e83ef82"/>
 
 		<link rel="shortcut icon" type="image/png" href="/static/images/favicon.ico"/>
 
@@ -172,6 +173,7 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 								<!-- <div layout="row" layout-align="start start" style="font-size: 80px;" >Connect on</div> -->
 								<h1>Connect On</h1>
 								<!-- <div flex="20"></div> -->
+								<a href="https://plus.google.com/105439829047178982219" rel="publisher"></a>
 								<div layout="row" layout-align="center center">
 									<div flex="33">
 										<a href="http://www.pinterest.com/thirddime/thirddime-art/" target="_blank">
