Subscribe page styling.

--- a/thirdDime/static/css/subscribe/main.css
+++ b/thirdDime/static/css/subscribe/main.css
@@ -3,9 +3,10 @@ html {
 }
 
 body {
+  font-family: 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow: hidden;
   height: 100%;
-  background-image: url(/static/images/subscribe/sun.jpg);
+  background-image: url(/static/images/subscribe/sunBlur-compressed.jpg);
   background-repeat: no-repeat;
   background-position: center;
   -webkit-background-size: cover;
@@ -24,6 +25,10 @@ body, input {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
 }
 
 a {
