--- a/thirdDime/templates/subscribe.html
+++ b/thirdDime/templates/subscribe.html
@@ -12,10 +12,9 @@
     <input type="submit" class="subscribe-submit" value="Submit" ng-click="subscribe()">
   </form>
 
-  <div class="quote" ng-hide="visible">
+  <div class="quote" ng-cloak ng-hide="visible">
     <span class="heavy">Looking at painting is an act of self-discovery <br> What we see is a reflection of our own conscience</span> <br><br><br><br> <span class="quotelow">Thank You for joining us on this journey <br> <a href="/blog">Keep exploring</a></span>
   </div>
-
 
   <script src="/static/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="/static/bower_components/angular/angular.min.js"></script>
