Put ng-cloak on the main page.

--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -52,7 +52,7 @@ for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElemen
 mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 		
 	</head>
-	<body ng-controller="AppController">
+	<body ng-controller="AppController" ng-cloak>
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content container 100%">
