--- a/thirdDime/static/css/style.css
+++ b/thirdDime/static/css/style.css
@@ -14,6 +14,12 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
+
 	body {
 		background: #fff;
 	}
